fix issue where talks page was overflowing at the top
we need min-height 100% because non full-height pages break otherwise

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   top: 0;
   left: 0;
